
Thu Jun 15 17:56:43 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Wed Jun 14 19:28:33 1995  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: added install rules

Fri Jun  9 19:16:49 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Tue Jun  6 20:59:56 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* test.c (do_remote): Case sockaddr_in * to sockaddr * in calling
		krb524_convert_creds_addr. 
		(krb4_print_ticket): issue_time should be a KRB4_32

	* encode.c (encode_v4tkt): Cast a the unsigned long mbz field of
		KTEXT to krb5_int32 for call to encode_int32.

	* conv_creds.c (krb524_convert_creds_addr): Cast sockaddr * to
		sockaddr_in *. 

Tue Jun 6 17:25:20 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in : Change $(ARCHIVE) to $(ARADD) so that updates to the
		library replace modules instead of appending them.
	* cnv_tkt_skey.c, conv_creds.c : Concatenate the two strings which
		comprise the print format.  Some compilers cannot deal with
		<string><string> (e.g. Ultrix).

Mon Jun  5 22:25:33 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in, cnv_tkt_skey.c, conv_creds.c, conv_princ.c,
		conv_tkt.c, encode.c, getcred.c, k524init.c, krb524.h,
		krb524d.c, misc.c, sendmsg.c, test.c, configure.in:
		Updated to use autoconf, and to use the new Kerberos
		library API.  
		
Wed Mar 27 21:15:00 1995  Keith Vetter (keithv@fusion.com)

	* renamed conv_tkt_skey.c to cnv_tkt_skey.c for DOS 8.3
	   compatability.
	* Makefile: reflected the above change

Tue Feb 28 02:31:22 1995  John Gilmore  (gnu at toad.com)

	* README, *.[ch]:  Avoid <...> includes for our include files.

Thu Sep 15 10:47:27 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile, README, RELEASE_NOTES, conv_creds.c, conv_princ.c,